tests/baselines/reference/contextuallyTypedFunctionExpressionsAndReturnAnnotations(strict=true).errors.txt
contextuallyTypedFunctionExpressionsAndReturnAnnotations.ts(1,18): error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
contextuallyTypedFunctionExpressionsAndReturnAnnotations.ts(6,5): error TS2322: Type 'null' is not assignable to type '(y2: number) => void'.


==== contextuallyTypedFunctionExpressionsAndReturnAnnotations.ts (2 errors) ====
    declare function foo(x: (y: string) => (y2: number) => void);
                     ~~~
!!! error TS7010: 'foo', which lacks return-type annotation, implicitly has an 'any' return type.
    
    // Contextually type the parameter even if there is a return annotation
    foo((y): (y2: number) => void => {
        var z = y.charAt(0); // Should be string
        return null;
        ~~~~~~
!!! error TS2322: Type 'null' is not assignable to type '(y2: number) => void'.
    });
    
    foo((y: string) => {
        return y2 => {
            var z = y2.toFixed(); // Should be string
            return 0;
        };
    });